--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,8 @@
 github_users:
-  - torvalds
-  - alshedivat
-
+  - captain-pool
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - geomstats/geomstats
+  - tensorflow/tensorflow
+  - tensorflow/hub
+  - tensorflow/datasets
+  - captain-pool/GSOC
